# westpatch

./: .gitignore  CMakeLists.txt  File.txt  GroupEnvelopeManager.cpp  GroupEnvelopeManager.h  GroupLayout.cpp  GroupLayout.h  Uncertainty266.cpp  Uncertainty266.h  WestPatchGroupState.h  WestPatchLane.h  build_log.txt  buildlog.txt
Source/: GroupEnvelopeManager.cpp  GroupEnvelopeManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Wavefolder.cpp  Wavefolder.h
Source/core/: GroupVoiceEngine.h  SignalBus.h  WestPatchGroupState.h
Source/dsp/: LowPassGate.cpp  LowPassGate.h  NoiseSource.cpp  NoiseSource.h  Oscillator.cpp  Oscillator.h  Wavefolder.cpp  Wavefolder.h  WestPatchLane.cpp  WestPatchLane.h
Source/modulation/: FunctionGenerator281.cpp  FunctionGenerator281.h  Uncertainty266.cpp  Uncertainty266.h
